# MoveIt2-and-Arduino-for-moving-a-6dof-robot

./: README.md  package.xml  setup.cfg  setup.py
centauri_6dof_to_arduino/: joint_states_to_arduino_node.py  micro_json_to_arduino_node.py  moveit_joint_states_to_arduino_node.py
